# rust_axum_diesel_ethers

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
migration/src/: m20220101_000001_create_table.rs
migrations/2023-12-14-152511_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: db.rs  user.rs
