[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" } # depends on your needs

axum = { version = "0.7.2", features = ["default", "macros", "tokio"] }
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio", "macros", "debug-print"]}
tokio = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"]}
